@@ -1,6 +1,7 @@
 ﻿[B]Changelog[/B]
-Fixed: Some program listings did not work in the RTL channel on 32 bit systems.
+Fixed: RTL added a user-agent check and returns a "418 I'm a teapot" error
 
 [I]Previous changes[/I]
+Fixed: Some program listings did not work in the RTL channel on 32 bit systems.
 Fixed: RTL broke their paging..and my channel (Fixes #591)
 Fixed: Some RTL shows do not have any descriptions, and that broke stuff.
